chore: add Add-Opens to META-INF/MANIFEST.MF